--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-
-
-@import url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 @custom-variant dark (&:is(.dark *));
 
@@ -124,5 +121,12 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer base {
+  bottom:not(:disabled),
+  [role="button"]:not(:disabled) {
+    cursor: pointer;
   }
 }
